k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: borodindmitriy/e-commerce-back
          ports:
            - containerPort: 10000
            - containerPort: 10001
          # resources:
          #   requests:
          #     memory: "256Mi"
          #     cpu: "256m"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"
