k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - e-commerce-nodejs.ru
        - www.e-commerce-nodejs.ru
      secretName: e-commerce-nodejs-ru
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /static
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 10000
          - path: /api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 10000
          - path: /ws
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 10001
